[package]
name = "rgch"
version = "0.1.16"
authors = ["Scstechr <teufelkonig@gmail.com>"]
edition = "2018"
description = "Rust version of gch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.4"
chrono = "0.4.10"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
