[package]
name = "rgch"
version = "0.1.29"
authors = ["Scstechr <teufelkonig@gmail.com>"]
edition = "2018"
description = "Rust version of gch"
license-file = "LICENSE"
repository = "https://github.com/Scstechr/rgch"
readme = "README.md"
categories = ["command_line_utilities"]
keywords = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
