[package]
name = "rgch"
version = "0.1.33"
authors = ["Scstechr <teufelkonig@gmail.com>"]
edition = "2018"
description = "Rust version of gch"
license-file = "LICENSE"
repository = "https://github.com/Scstechr/rgch"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "^1.5.4"
chrono = "^0.4.10"
serde = { version = "^1.0.104", features = ["derive"] }
toml = "^0.5.5"
